src/objects/Treatment_CRF_Report_Table_3__c.object
<CustomObject>
    <fields>
        <fullName>Off_study_Approved__c</fullName>
        <label>Off study Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_study_Submitted__c</fullName>
        <label>Off study Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protocol_Violation_Approved__c</fullName>
        <label>Protocol Violation Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protocol_Violation_Submitted__c</fullName>
        <label>Protocol Violation Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Treatment CRF Report Table 3</relationshipLabel>
        <relationshipName>Treatment_CRF_Report_Table_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tissue_Early_Tx_Submitted__c</fullName>
        <label>Tissue Early Tx Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tissue_Inter_Reg_Submitted__c</fullName>
        <label>Tissue Inter Reg Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tissue_Surgery_Submitted__c</fullName>
        <label>Tissue Surgery Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Name__c</fullName>
        <label>Trial Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Treatment CRF Report Table 3</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment CRF Report Table 3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>